[package]
edition = "2021"
name = "auth"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
clap = {version = "3.0", features = ["derive"]}
jsonwebtoken = "8.1.1"
serde = {version = "1.0.142", features = ["derive"]}
serde_derive = "1.0.142"
serde_json = "1.0.83"
thiserror = "1.0.32"
